--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(i for i in range(num+1))\n",
+    "summation(num)"
    ]
   },
   {
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
-    "    # This function returns the sum of *args\n",
+    "    return sum(args)\n",
     "    \n",
-    "    # Your code here:"
+    "summation2(*array)"
    ]
   },
   {
@@ -79,14 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
-    "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    n=[a,b,c]\n",
+    "    return sum(n)\n",
+    "\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
-    "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(kwargs.values()) - kwargs['red']\n",
+    "\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -126,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
-    "    # This function returns the sum of a,b,c,d and e\n",
-    "    # You need to define the function input\n",
-    "    # Your code here:"
+    "def summation5(*args,**kwargs):\n",
+    "    return sum(args) + sum(kwargs.values())\n",
+    "\n",
+    "summation5(a,b,c,*d,**e)"
    ]
   },
   {
@@ -371,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
