--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation(num):\n",
+    "    a = sum(i for i in range(num +1))\n",
+    "    return a\n",
+    "\n",
+    "summation(num)\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
     "    # Your code here:"
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
+    "    a=0\n",
+    "    for p in range(len(array)):\n",
+    "        a+= + array[p]\n",
+    "    return a\n",
+    "        \n",
+    "summation2(array)\n",
+    "\n",
     "    # This function returns the sum of *args\n",
     "    \n",
     "    # Your code here:"
@@ -79,11 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
+    "    z = a+b+c\n",
+    "    return z\n",
+    "\n",
+    "summation3(*array)\n",
+    "    \n",
     "    # This function returns a+b+c\n",
     "    \n",
     "    # Your code here:"
@@ -98,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
+    "    a=0\n",
+    "    for key in kwargs.keys():\n",
+    "        if key=='red':\n",
+    "            continue\n",
+    "        else:\n",
+    "            a+=kwargs[key]         \n",
+    "    return a\n",
+    "\n",
+    "\n",
+    "print(summation4(**dictionary))\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
     "    # Your code here:"
@@ -126,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,11 +206,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args, **kwargs):\n",
+    "    a=0\n",
+    "    b=0\n",
+    "    for i in args:\n",
+    "        a+=i\n",
+    "    for j in kwargs:\n",
+    "            b+=kwargs[j]\n",
+    "    c = a + b\n",
+    "    return c\n",
+    "        \n",
+    "    \n",
+    "summation5(a,b,c,*d,**e)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
     "    # Your code here:"
@@ -160,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +318,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-129-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -242,9 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -265,11 +364,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "iterator=iter([1,2,3])\n",
+    "\n",
     "def divisible2(iterator):\n",
+    "    a=0\n",
+    "    for i in iterator:\n",
+    "        if i%2==0:\n",
+    "            a=i\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
+    "    return a\n",
+    "    \n",
+    "divisible2(iterator)\n",
+    "\n",
+    "\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
     "    # Output: Integer\n",
@@ -292,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +436,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
     "\n",
@@ -331,11 +467,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def even_iterator(n):\n",
+    "    number = 0\n",
+    "    while number < n:\n",
+    "        yield number\n",
+    "        number = number + 2   \n",
+    "    \n",
+    "for i in even_iterator(5):\n",
+    "    print(i)\n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
     "    # Input: integer\n",
     "    # Output: iterator\n",
@@ -371,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
