--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,20 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num=76"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#76\n",
+    "num=76\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def summation(num):\n",
+    "    a = sum (i for i in range(1,num+1))\n",
+    "    return a\n",
+    "summation(num)\n",
+    "    \n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
     "    # Your code here:"
@@ -62,9 +78,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#*args se puede usar como un parámetro para enviar a las funciones una lista de argumentos de longitud variable \n",
+    "#sin palabras clave. \n",
     "def summation2(*args):\n",
+    "    return sum(*args)\n",
+    "summation2(array)\n",
     "    # This function returns the sum of *args\n",
     "    \n",
     "    # Your code here:"
@@ -79,13 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
-    "    # This function returns a+b+c\n",
+    "    return a+b+c\n",
+    "summation3(*array)\n",
+    "\n",
+    "# clave:  cuando * recorro el args de uno en uno\n",
     "    \n",
+    "    # This function returns a+b+c\n",
     "    # Your code here:"
    ]
   },
@@ -98,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +153,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
+    "    # print(kwargs)\n",
+    "    #for color in kwargs:\n",
+    "    #    print(color)\n",
+    "    return sum(numero for color, numero in kwargs.items() if color != 'red') \n",
+    "\n",
+    "summation4(**dictionary)\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
     "    # Your code here:"
@@ -126,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,11 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(a,b,c,*args,**kwargs):\n",
+    "    return a+b+c+sum(*args)+sum(kwargs.values())\n",
+    "summation5(a,b,c,d,**e)\n",
+    "\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
     "    # Your code here:"
@@ -160,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +306,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -269,7 +346,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisible2(iterator):\n",
+    "iterator = iter([1,2,3,7,8,7,5])\n",
+    "\n",
+    "def divisible2(iterator=0):\n",
+    "    # NO SE PUEDE PORQUE NO ADMITE BREAK? return [i for i in iterator if i%2==0] \n",
+    "    for i in iterator:\n",
+    "        if i%2==0:\n",
+    "            return i\n",
+    "            break\n",
+    "divisible2(iterator)\n",
+    "\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
     "    # Output: Integer\n",
@@ -300,7 +386,9 @@
     "     number = 0\n",
     "     while number < n:\n",
     "         yield number\n",
-    "         number = number + 1"
+    "         number = number + 1\n",
+    "#for i in firstn(3):\n",
+    "#    print(i)"
    ]
   },
   {
@@ -336,6 +424,14 @@
    "outputs": [],
    "source": [
     "def even_iterator(n):\n",
+    "    number = 0\n",
+    "    while number < n:\n",
+    "            yield number\n",
+    "            number = number + 1\n",
+    "            \n",
+    "for i in even_iterator(5):\n",
+    "    print(i)\n",
+    "    \n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
     "    # Input: integer\n",
     "    # Output: iterator\n",
@@ -371,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
