--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    suma = 0\n",
+    "    for i in range(num+1):\n",
+    "        suma = i + suma\n",
+    "    return(suma)\n",
+    "\n",
+    "print(summation(num))\n",
+    "\n"
    ]
   },
   {
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
-    "def summation2(*args):\n",
+    "def summation2(*array):\n",
     "    # This function returns the sum of *args\n",
     "    \n",
-    "    # Your code here:"
+    "    suma = 0\n",
+    "    for i in array:\n",
+    "        suma = i + suma\n",
+    "    return(suma)\n",
+    "\n",
+    "print(summation2(*array))"
    ]
   },
   {
@@ -79,14 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
+    "\n",
+    "    print(a+b+c)\n",
     "    \n",
-    "    # Your code here:"
+    "summation3(*array)"
    ]
   },
   {
@@ -98,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +143,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red 3\n",
+      "blue 8\n",
+      "green 24\n",
+      "orange 12\n",
+      "purple 10\n",
+      "54\n"
+     ]
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:"
+    "    suma = 0\n",
+    "    for color, numero in kwargs.items():\n",
+    "        print(color, numero)\n",
+    "        if color != 'red': \n",
+    "            suma = numero + suma\n",
+    "    return(suma)\n",
+    "\n",
+    "print(summation4(**dictionary))\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -371,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
