--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    my_sum = 0\n",
+    "    for n in range(1,num+1):\n",
+    "         my_sum += n\n",
+    "    print(\"Sum:\", my_sum)\n",
+    "summation(num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -51,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    mysum = 0\n",
+    "    for n in args:\n",
+    "        mysum = mysum + n\n",
+    "    print(\"Sum:\", mysum)\n",
+    "summation2(*array)\n",
+    "   "
    ]
   },
   {
@@ -79,14 +108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
-    "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    n = [a, b, c]\n",
+    "    mysum1 = a + b + c\n",
+    "    print(\"Sum:\", mysum1)\n",
+    "   \n",
+    "summation3(*array)\n",
+    "    "
    ]
   },
   {
@@ -98,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of all except red: 54\n"
+     ]
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
+    "    # Your code here:\n",
+    "    # print(kwargs)\n",
     "    \n",
-    "    # Your code here:"
+    "    my_sum = sum(kwargs.values()) - kwargs['red']\n",
+    "    print(\"Sum of all except red:\", my_sum)\n",
+    "    \n",
+    "summation4(**dictionary)\n",
+    "    "
    ]
   },
   {
@@ -126,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +193,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Sum: 769\n"
+     ]
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
-    "    # This function returns the sum of a,b,c,d and e\n",
-    "    # You need to define the function input\n",
-    "    # Your code here:"
+    "def summation5(*args,**kwargs):\n",
+    "    \n",
+    "    FinalSum = sum(args) + sum(kwargs.values())\n",
+    "    print(\"Final Sum:\", FinalSum)\n",
+    "\n",
+    "summation5(a, b, c, *d, **e)\n",
+    "\n",
+    "    #Alt Method:\n",
+    "    #SumABC = a + b + c\n",
+    "    #print(\"SumABC:\", SumABC)\n",
+    "    #SumD = sum(d)\n",
+    "    #print(\"SumD:\", SumD)\n",
+    "    #SumE = sum(kwargs.values())\n",
+    "    #print(\"SumE:\", SumE)\n",
+    "    #TotalSum = SumABC + SumD + SumE\n",
+    "    #print(\"Total Sum:\", TotalSum)"
    ]
   },
   {
@@ -160,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through a iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -265,9 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
@@ -276,8 +371,24 @@
     "    \n",
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
-    "    \n",
+    "\n",
     "    # Your code here:\n",
+    "    \n",
+    "\n",
+    "    for i in iterator:\n",
+    "\n",
+    "        if i % 2 == 1:\n",
+    "            continue\n",
+    "        \n",
+    "        elif i % 2 == 0:\n",
+    "            return(i)\n",
+    "                  \n",
+    "    else:\n",
+    "        return(0)\n",
+    "        \n",
+    "    \n",
+    "divisible2(iter([1,2,3]))\n",
+    "        \n",
     "    "
    ]
   },
@@ -292,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
     "\n",
@@ -331,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +467,63 @@
     "    # Sample Output: iter([0, 2, 4])\n",
     "    \n",
     "    # Your code here:\n",
+    "    \n",
+    " \n",
+    "    \n",
+    "    number = 0\n",
+    "     \n",
+    "    while number < n:\n",
+    "    \n",
+    "        if number % 2 == 0:\n",
+    "            yield number\n",
+    "            number = number + 1\n",
+    "        else: \n",
+    "            number = number + 1\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "x = even_iterator(5)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object even_iterator at 0x1067fe660>"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in x: \n",
+    "    print(e)"
    ]
   },
   {
@@ -371,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
