Completando un problema

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "769"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,6 +231,8 @@
     "    c = a + b\n",
     "    return c\n",
     "        \n",
+    "def summation5(*args, **kwargs):\n",
+    "    return sum(args) + sum(kwargs.values())\n",
     "    \n",
     "summation5(a,b,c,*d,**e)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +375,7 @@
        "2"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,11 +387,11 @@
     "    a=0\n",
     "    for i in iterator:\n",
     "        if i%2==0:\n",
-    "            a=i\n",
-    "            break\n",
+    "            return i\n",
     "        else:\n",
     "            continue\n",
-    "    return a\n",
+    "    else:\n",
+    "        return 0\n",
     "    \n",
     "divisible2(iterator)\n",
     "\n",
