--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation(num):\n",
+    "#def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
+    "    # Your code here:\n",
     "    \n",
-    "    # Your code here:"
+    "def summation(num):    \n",
+    "    return sum(i for i in range(num+1))\n",
+    "        \n",
+    "summation(num)"
    ]
   },
   {
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "def summation2(*args):\n",
+    "        return sum(i for i in array)\n",
+    "summation2(array)    "
    ]
   },
   {
@@ -80,14 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation3(a, b, c):\n",
+    "#def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
+    "array=[3, 8, 16]\n",
+    "    # Your code here:\n",
     "    \n",
-    "    # Your code here:"
+    "def summation3(a, b, c):\n",
+    "    return sum(i for i in array)\n",
+    "\n",
+    "summation3(*array)\n",
+    "#Con esto le dices a la función que te aplique la función a todos los elemntos presentes en array PERO, hasta solo los\n",
+    "# definidos en la función, es decir, a,b,c"
    ]
   },
   {
@@ -99,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +154,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation4(**kwargs):\n",
+    "#def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
+    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}    \n",
+    "    # Your code here:\n",
     "    \n",
-    "    # Your code here:"
+    "def summation4(**kwargs):\n",
+    "    return sum(kwargs.values()) - kwargs['red']\n",
+    "summation4(**dictionary)\n"
    ]
   },
   {
@@ -127,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args, **kwargs):\n",
+    "    return sum(args) + sum(kwargs.values())\n",
+    "summation5(a,b,c,*d,**e)\n",
+    "    \n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -161,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -271,6 +358,7 @@
    "outputs": [],
    "source": [
     "def divisible2(iterator):\n",
+    "    \n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
     "    # Output: Integer\n",
