--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "iterator = iter([1,2,3,4,6,5,7,5,4])\n",
     "def divisible2(iterator):\n",
+    "    for i in iterator:\n",
+    "         if i %2==0:\n",
+    "            return i\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "divisible2(iterator)\n",
+    "    \n",
+    "    \n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
     "    # Output: Integer\n",
@@ -348,8 +358,7 @@
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
     "    \n",
-    "    # Your code here:\n",
-    "    "
+    "    # Your code here:\n"
    ]
   },
   {
@@ -383,9 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'firstn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-bfdae2d108cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0miterator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirstn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'firstn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
     "\n",
@@ -402,21 +423,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object even_iterator at 0x1092bfcf0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_iterator(n): \n",
+    "    i=0\n",
+    "    while i <= n:\n",
+    "         if i %2==0:\n",
+    "            yield i\n",
+    "print(even_iterator(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def even_iterator(n):\n",
-    "    # This function produces an iterator containing all even numbers between 0 and n\n",
-    "    # Input: integer\n",
-    "    # Output: iterator\n",
-    "    \n",
-    "    # Sample Input: 5\n",
-    "    # Sample Output: iter([0, 2, 4])\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
