Nueva solución generador

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,13 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<generator object firstn at 0x10fea98b8>\n",
       "0\n",
       "1\n",
       "2\n",
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -485,12 +486,24 @@
    "source": [
     "def even_iterator(n):\n",
     "    number = 0\n",
-    "    while number < n:\n",
+    "    while number <= n:\n",
     "        yield number\n",
-    "        number = number + 2   \n",
-    "    \n",
+    "        number += 2 \n",
+    "        \n",
+    "def even_iterator(n):\n",
+    "    number = 0\n",
+    "    while number <= n:\n",
+    "        if number%2==0:\n",
+    "            yield number\n",
+    "            number += 1\n",
+    "        else:\n",
+    "            number += 1\n",
+    "            continue \n",
+    "            \n",
     "for i in even_iterator(5):\n",
     "    print(i)\n",
+    "    \n",
+    "    \n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
     "    # Input: integer\n",
     "    # Output: iterator\n",
@@ -501,6 +514,13 @@
     "    # Your code here:\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
