--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -336,9 +336,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = iter([1,2,3,4,6,5,7,5,4])\n",
     "def divisible2(iterator):\n",
@@ -423,14 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object even_iterator at 0x1092bfcf0>\n"
+      "0\n",
+      "2\n",
+      "4\n"
      ]
     }
    ],
@@ -438,9 +449,15 @@
     "def even_iterator(n): \n",
     "    i=0\n",
     "    while i <= n:\n",
-    "         if i %2==0:\n",
+    "        if i %2==0:\n",
     "            yield i\n",
-    "print(even_iterator(5))"
+    "            i+=1\n",
+    "        else:\n",
+    "            i+=1\n",
+    "            continue\n",
+    "            \n",
+    "for i in even_iterator(5):\n",
+    "    print(i)"
    ]
   },
   {
