--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -353,11 +353,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "iterator = iter([1,2,3,4])\n",
+    "\n",
+    "\n",
     "def divisible2(iterator):\n",
+    "    for i in iterator:\n",
+    "        if i % 2 == 0:\n",
+    "            return i\n",
+    "    else:\n",
+    "        return 0\n",
+    "divisible2(iterator)        \n",
+    "            \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
@@ -367,7 +391,11 @@
     "    # Sample Output: 2\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "#Los iteradores tienes que cargarlos constantemente para poder ejecutarlos. Cuando los ejecutas te recorren todos los elementos que lo forman\n",
+    "# Con la def de esa func. haces que el for pase por todos sus elementos y los lea\n",
+    "# Con el if, creas la condición de par (recuerda que % es para el resto = 0)\n",
+    "# Por último, has colocado un else en el for, no en el if, por qué?\n",
+    "# con este ejercicio, el else es para el caso que no tenga pares, que te deje un resultado"
    ]
   },
   {
