(pen)última modificación

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -429,13 +429,14 @@
      "text": [
       "0\n",
       "2\n",
-      "4\n"
+      "4\n",
+      "6\n"
      ]
     }
    ],
    "source": [
     "def even_iterator(n):\n",
-    "    for number in range(n):\n",
+    "    for number in range(n+1):\n",
     "        if number%2 == 0:\n",
     "            yield number\n",
     "\n",
@@ -448,7 +449,7 @@
     "        if number%2 == 0:\n",
     "            yield number'''\n",
     "\n",
-    "iterator= even_iterator(5)\n",
+    "iterator= even_iterator(6)\n",
     "            \n",
     "for i in iterator:\n",
     "    print (i)\n",
