cambiando el bucle de while a for

--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -443,22 +443,26 @@
      "text": [
       "0\n",
       "2\n",
-      "4\n"
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
      ]
     }
    ],
    "source": [
-    "def even_iterator(n): \n",
-    "    i=0\n",
-    "    while i <= n:\n",
-    "        if i %2==0:\n",
+    "def even_iterator(n):\n",
+    "    for i in range(n+1):\n",
+    "        if i%2==0:\n",
     "            yield i\n",
-    "            i+=1\n",
-    "        else:\n",
-    "            i+=1\n",
-    "            continue\n",
-    "            \n",
-    "for i in even_iterator(5):\n",
+    "\n",
+    "\n",
+    "for i in even_iterator(20):\n",
     "    print(i)"
    ]
   },
