--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -463,7 +463,8 @@
     "\n",
     "\n",
     "for i in even_iterator(20):\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    "
    ]
   },
   {
