--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -499,6 +499,11 @@
     "        else:\n",
     "            number += 1\n",
     "            continue \n",
+    "            \n",
+    "def even_iterator(n):\n",
+    "    for i in range(n+1):\n",
+    "        if i%2==0:\n",
+    "            yield(i)\n",
     "            \n",
     "for i in even_iterator(5):\n",
     "    print(i)\n",
